[gd_scene load_steps=45 format=3 uid="uid://diuh602m1c7iu"]

[ext_resource type="Script" path="res://characters/player 2/script/player_cat.gd" id="1_oha53"]
[ext_resource type="Texture2D" uid="uid://bs0eb6wbdidee" path="res://characters/player 2/object_resources/orange_cat/Attack.png" id="2_6lexg"]
[ext_resource type="Texture2D" uid="uid://b3aa1f8ok0ei2" path="res://characters/player 2/object_resources/orange_cat/Idle.png" id="3_7erhy"]
[ext_resource type="Texture2D" uid="uid://byn5he560s52" path="res://characters/player 2/object_resources/orange_cat/Jamp.png" id="4_4p2mu"]
[ext_resource type="Texture2D" uid="uid://djbe7csiyu74h" path="res://characters/player 2/object_resources/orange_cat/Walk.png" id="5_dro3x"]
[ext_resource type="Texture2D" uid="uid://qhfmd1m6x53l" path="res://characters/player/img/Under.png" id="6_u0mf0"]
[ext_resource type="Texture2D" uid="uid://dgp20hdd774br" path="res://characters/player/img/Over.png" id="7_13e66"]
[ext_resource type="Texture2D" uid="uid://b5tuyxluli5q5" path="res://characters/player/img/Progress.png" id="8_my2t2"]
[ext_resource type="AudioStream" uid="uid://doyki5xjyi43h" path="res://characters/player 2/sounds/cat-meow-8-fx-306184.mp3" id="9_od02b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cqomn"]
atlas = ExtResource("2_6lexg")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1f3k"]
atlas = ExtResource("2_6lexg")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbsh3"]
atlas = ExtResource("2_6lexg")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxgxt"]
atlas = ExtResource("3_7erhy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht3w2"]
atlas = ExtResource("3_7erhy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkgvk"]
atlas = ExtResource("3_7erhy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejlnh"]
atlas = ExtResource("3_7erhy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_036aq"]
atlas = ExtResource("3_7erhy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqegk"]
atlas = ExtResource("3_7erhy")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ohy5"]
atlas = ExtResource("3_7erhy")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbwu3"]
atlas = ExtResource("4_4p2mu")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_53i57"]
atlas = ExtResource("4_4p2mu")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lesv"]
atlas = ExtResource("4_4p2mu")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4k1g"]
atlas = ExtResource("4_4p2mu")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_isr4j"]
atlas = ExtResource("4_4p2mu")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhneq"]
atlas = ExtResource("4_4p2mu")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_680u8"]
atlas = ExtResource("4_4p2mu")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbg6o"]
atlas = ExtResource("4_4p2mu")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8r73"]
atlas = ExtResource("4_4p2mu")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv3jd"]
atlas = ExtResource("4_4p2mu")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_81n3h"]
atlas = ExtResource("5_dro3x")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0c3"]
atlas = ExtResource("5_dro3x")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh8hi"]
atlas = ExtResource("5_dro3x")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nptk"]
atlas = ExtResource("5_dro3x")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_me6cu"]
atlas = ExtResource("5_dro3x")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8qqx"]
atlas = ExtResource("5_dro3x")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovt6f"]
atlas = ExtResource("5_dro3x")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u8cw"]
atlas = ExtResource("5_dro3x")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h51fr"]
atlas = ExtResource("5_dro3x")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nh1o"]
atlas = ExtResource("5_dro3x")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7fl8"]
atlas = ExtResource("5_dro3x")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_0ouba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqomn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1f3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbsh3")
}],
"loop": false,
"name": &"attack",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxgxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht3w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkgvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejlnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_036aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqegk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ohy5")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbwu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53i57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lesv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4k1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isr4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhneq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_680u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbg6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8r73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv3jd")
}],
"loop": false,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81n3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh8hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nptk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me6cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8qqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovt6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u8cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h51fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nh1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7fl8")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scp63"]
size = Vector2(38, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lqnj5"]
size = Vector2(105, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qx55c"]
size = Vector2(39, 66)

[node name="player_cat" type="CharacterBody2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_oha53")
metadata/_edit_group_ = true

[node name="ani_player" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -21)
sprite_frames = SubResource("SpriteFrames_0ouba")
animation = &"attack"
speed_scale = 1.25

[node name="col_player" type="CollisionShape2D" parent="."]
position = Vector2(-4, 32)
shape = SubResource("RectangleShape2D_scp63")

[node name="attack_area" type="Area2D" parent="."]
position = Vector2(20, 0)
collision_mask = 3

[node name="col_attack" type="CollisionShape2D" parent="attack_area"]
position = Vector2(-22.5, 7.5)
shape = SubResource("RectangleShape2D_lqnj5")

[node name="area_empuje" type="Area2D" parent="."]
collision_mask = 3

[node name="col_empuje" type="CollisionShape2D" parent="area_empuje"]
position = Vector2(-3.5, 10)
shape = SubResource("RectangleShape2D_qx55c")

[node name="bar_health" type="Node2D" parent="."]

[node name="TextureProgressBar" type="TextureProgressBar" parent="bar_health"]
offset_left = -55.0
offset_top = -60.0
offset_right = 39.0
offset_bottom = 18.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("6_u0mf0")
texture_over = ExtResource("7_13e66")
texture_progress = ExtResource("8_my2t2")
tint_under = Color(0, 0, 0, 1)
tint_over = Color(0.0627451, 0.588235, 0.345098, 1)

[node name="audio_player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_od02b")
bus = &"SFX"

[node name="time" type="Timer" parent="."]
one_shot = true

[node name="timer_invincible" type="Timer" parent="."]

[node name="timer_bar" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="particles_blood" type="CPUParticles2D" parent="." groups=["efectos_visuales"]]
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.75
particle_flag_align_y = true
spread = 180.0
gravity = Vector2(0, 500)
initial_velocity_min = 150.0
initial_velocity_max = 308.0
angular_velocity_min = 9.86
angular_velocity_max = 720.0
color = Color(0.92549, 0.145098, 0.133333, 1)
